--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  background: lightblue;
+  /*background: lightblue;*/
+  background: aliceblue;
   height: 100vh;
   display: flex;
   align-items: center;
